# imu-plotting-pose-data

./: CMakeLists.txt  README.md  client_plotting.cpp  server_RaspberryPi.cpp
header_only_libs/: json.hpp
